# RaspGUI

./: CMakeLists.txt  run.sh
src/: config.hpp.in  main.cpp
src/components/: CMakeLists.txt
src/components/app/: app.cpp  app.hpp
src/components/simple_widget/: simple_widget.cpp  simple_widget.hpp
src/uikit/: CMakeLists.txt
src/uikit/context/: context.cpp  context.hpp
src/uikit/context/assets_handler/: assets_handler.hpp
src/uikit/context/drawer/: drawer.hpp
src/uikit/event/: event.hpp
src/uikit/manager/: manager.cpp  manager.hpp
src/uikit/utils/: utils.cpp  utils.hpp
src/uikit/widget/: widget.cpp  widget.hpp
src/uikit/widget_group/: widget_group.cpp  widget_group.hpp
